different HGNN types memory efficiency

--- a/HGNN/dataPrep/Copy_Zip images subset.ipynb
+++ b/HGNN/dataPrep/Copy_Zip images subset.ipynb
@@ -37,8 +37,8 @@
    "source": [
     "# defining global variables\n",
     "image_directory='/data/BGNN_data/INHS_cropped'\n",
-    "subset = 'biology_paper_200max'\n",
-    "zip_output_directory = '/data/BGNN_data/biology_paper_200max'\n",
+    "subset = 'biology_paper_cleaned_200max'\n",
+    "zip_output_directory = '/data/BGNN_data/biology_paper_cleaned_200max_show'\n",
     "\n",
     "import os\n",
     "if not os.path.exists(zip_output_directory):\n",
@@ -85,22 +85,60 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24bf394f80414b02a49e6cfa101baecd",
+       "model_id": "7c16f21eb4fe452eb9ea0500e36e577b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Saving images', max=6695.0, style=ProgressStyle(descripti…"
+       "HBox(children=(FloatProgress(value=0.0, description='Saving images', max=6470.0, style=ProgressStyle(descripti…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n",
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n",
+      "IOPub message rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_msg_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_msg_rate_limit=1000.0 (msgs/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "\n",
+      "Creating tar file\n",
+      "tar file created\n"
      ]
     }
    ],
@@ -125,14 +163,14 @@
     "# Save csv file\n",
     "csv_file.to_csv(os.path.join(zip_output_directory,\"metadata.csv\"))\n",
     "\n",
-    "# def make_tarfile(output_filename, source_dir):\n",
-    "#     with tarfile.open(output_filename, \"w:gz\") as tar:\n",
-    "#         tar.add(source_dir, arcname=os.path.basename(source_dir))\n",
-    "#     tar.close()\n",
+    "def make_tarfile(output_filename, source_dir):\n",
+    "    with tarfile.open(output_filename, \"w:gz\") as tar:\n",
+    "        tar.add(source_dir, arcname=os.path.basename(source_dir))\n",
+    "    tar.close()\n",
     "        \n",
-    "# print(\"Creating tar file\")\n",
-    "# make_tarfile(os.path.join(zip_output_directory,'images.tar.gz'), os.path.join(zip_output_directory))\n",
-    "# print(\"tar file created\")"
+    "print(\"Creating tar file\")\n",
+    "make_tarfile(os.path.join(zip_output_directory,'images.tar.gz'), os.path.join(zip_output_directory))\n",
+    "print(\"tar file created\")"
    ]
   },
   {
