--- a/HGNN/dataPrep/Create cleaned metadata.ipynb
+++ b/HGNN/dataPrep/Create cleaned metadata.ipynb
@@ -32,10 +32,10 @@
    "source": [
     "dataPath=\"/data/BGNN_data\"\n",
     "image_path='INHS_cropped'\n",
-    "output_directory_name=\"biology_paper_200max\"\n",
+    "output_directory_name=\"biology_paper_cleaned\"\n",
     "cleaned_species_csv_fileName = \"cleaned_metadata.csv\"\n",
     "species_csv_fileName = \"metadata.csv\"\n",
-    "numberOfImagesPerSpecies_min =100 \n",
+    "numberOfImagesPerSpecies_min =100 # If None, no min\n",
     "numberOfImagesPerSpecies_toKeep =200 # If None, keep all"
    ]
   },
@@ -78,7 +78,8 @@
     "\n",
     "# find species that have a specific number of images\n",
     "grouped_by = metadata_csv_df['scientificName'].value_counts()\n",
-    "grouped_by = grouped_by[grouped_by > numberOfImagesPerSpecies_min]\n",
+    "if numberOfImagesPerSpecies_min is not None:\n",
+    "    grouped_by = grouped_by[grouped_by > numberOfImagesPerSpecies_min]\n",
     "scientificNameValues = grouped_by.index.values\n",
     "thresholded = metadata_csv_df[metadata_csv_df['scientificName'].isin(scientificNameValues)]\n",
     "\n",
