--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experimentName = \"biology_paper_dataset_differentModels\"\n",
+    "experimentName = \"biology_paper_200max_cleaned\"\n",
     "\n",
     "\n",
     "# When adding a new parameter:\n",
@@ -48,14 +48,14 @@
     "    \"validation_count\":0.16,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 128, # Bigger is more stable\n",
+    "    \"batchSize\": 64, # Bigger is more stable\n",
     "    \"n_epochs\":500,\n",
     "    \"learning_rate\":0.00005, # 0.00005\n",
-    "    \"numOfTrials\":5,\n",
+    "    \"numOfTrials\":3,\n",
     "    \"patience\": 10,\n",
     "    \"fc_width\":200,\n",
     "    \"fc_layers\": 1,\n",
-    "    \"modelType\":\"BB\",\n",
+    "    \"modelType\":\"DISCO\",\n",
     "    \"lambda\": 0.6,\n",
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
@@ -95,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "'/home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels/params.json'"
+       "'/home/elhamod/HGNN/experiments/biology_paper_dataset_differentModels_layers/params.json'"
       ]
      },
      "execution_count": 3,
@@ -107,9 +107,9 @@
     "cp = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "\n",
     "hyperp_params = {\n",
-    "    \"modelType\":[\"BB\",\"HGNN\",\"DISCO\",\"DSN\"]\n",
+    "#     \"modelType\":[\"HGNN_add\",\"HGNN_cat\"]\n",
     "#     \"dummy\":[0]\n",
-    "#     \"fc_layers\":[1,2,3],\n",
+    "    \"dataset_norm\":[\"layer2\",\"layer4\",\"avgpool\"],\n",
     "    \n",
     "#     \"img_res\": [448],\n",
     "#     \"learning_rate\": [0.00005, 0.0001, 0.0005, 0.001, 0.01, 0.1],\n",
@@ -137,14 +137,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 5, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
-      "models/dc9cdf5d84792686be05ad04199b4691281d7c64533198ad5baa2e78\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 5, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'HGNN', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
-      "models/47e062f28bdd7dc8768626a462508fca6f4a73b1693594d1c5b5d708\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 5, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
-      "models/39e82b1034de354855512342447991ea092e1c4a3bb9ba59613939c5\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 128, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 5, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DSN', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': True, 'aug_profile': 'withRotation_PCA1.5'}\n",
-      "models/109e15bd14b51286e5dcf8dd2630b2fba01de4f027517c124454a24f\n"
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 3, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': 'layer2', 'aug_profile': 'withRotation_PCA1.5'}\n",
+      "models/63c73f56db4a1f2e92eee932982d8477944a27359e624c4ed2c963c5\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 3, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': 'layer4', 'aug_profile': 'withRotation_PCA1.5'}\n",
+      "models/f63045e8ae0f2300166dbb0a196734932b869847f81548167e4289b4\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_200max', 'training_count': 0.64, 'validation_count': 0.16, 'batchSize': 64, 'n_epochs': 500, 'learning_rate': 5e-05, 'numOfTrials': 3, 'patience': 10, 'fc_width': 200, 'fc_layers': 1, 'modelType': 'DISCO', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'augmented': True, 'weight_decay': 0.0001, 'img_res': 448, 'tl_freeze': False, 'cnn_layers': 0, 'cnn_channels': 128, 'pretrained': True, 'two_nets': True, 'link_layer': 'layer3', 'dataset_norm': 'avgpool', 'aug_profile': 'withRotation_PCA1.5'}\n",
+      "models/b3ab7356a053eff487113d9695c968dc9cd8c6eb4cc3d48b063b7047\n"
      ]
     }
    ],
