--- a/HGNN/analyse/Analyze experiments.ipynb
+++ b/HGNN/analyse/Analyze experiments.ipynb
@@ -121,21 +121,17 @@
     "\n",
     "        # For analyzing experiments, we don't care about augmentation\n",
     "        datasetManager.updateParams(config_parser.fixPaths({**experiment_params,**{'augmented': False}}))\n",
-    "        dataset = datasetManager.getDataset()\n",
-    "        \n",
     "        train_loader, validation_loader, test_loader = datasetManager.getLoaders()\n",
-    "        fineList = dataset.csv_processor.getFineList()\n",
-    "        ordered_fineList=sorted(fineList) \n",
+    "        fineList = train_loader.dataset.csv_processor.getFineList()\n",
+    "        coarseList = train_loader.dataset.csv_processor.getCoarseList()\n",
     "        ordered_fineList_indices = sorted(range(len(fineList)), key=lambda k: fineList[k])\n",
-    "        coarseList = dataset.csv_processor.getCoarseList()\n",
-    "        ordered_coarseList=sorted(coarseList) \n",
     "        ordered_coarseList_indices = sorted(range(len(coarseList)), key=lambda k: coarseList[k])\n",
-    "        numberOffine = len(fineList)\n",
-    "        numberOfcoarse = len(coarseList)\n",
     "        architecture = {\n",
-    "            \"fine\": numberOffine,\n",
-    "            \"coarse\" : numberOfcoarse\n",
+    "            \"fine\": len(fineList),\n",
+    "            \"coarse\" : len(coarseList)\n",
     "        }\n",
+    "\n",
+    "\n",
     "        \n",
     "        # Loop through n trials\n",
     "        for i in trange(experiment_params[\"numOfTrials\"], desc=\"trial\"):\n",
