--- a/HGNN/analyse/Calculate random accuracy.ipynb
+++ b/HGNN/analyse/Calculate random accuracy.ipynb
@@ -87,7 +87,6 @@
     "experimentPathAndName = os.path.join(experimentsPath, experimentName)\n",
     "datasetManager = dataLoader.datasetManager(experimentPathAndName, dataPath)\n",
     "datasetManager.updateParams(config_parser.fixPaths(params))\n",
-    "dataset = datasetManager.getDataset()\n",
     "\n",
     "# instantiate trial stat object\n",
     "results_dir = os.path.join(experimentPathAndName, \"results\")\n",
@@ -155,7 +154,7 @@
    "source": [
     "train_loader, validation_loader, test_loader = datasetManager.getLoaders()\n",
     "\n",
-    "fineList = dataset.csv_processor.getFineList()\n",
+    "fineList = train_loader.dataset.csv_processor.getFineList()\n",
     "numberOffine = len(fineList)\n",
     "\n",
     "lbllist=torch.zeros(0)\n",
