--- a/HGNN/analyse/Obtain misclassified and correctly classified images.ipynb
+++ b/HGNN/analyse/Obtain misclassified and correctly classified images.ipynb
@@ -91,15 +91,13 @@
     "config_parser = ConfigParser(experimentsPath, dataPath, experimentName)\n",
     "datasetManager = dataLoader.datasetManager(experimentPathAndName, dataPath, True)\n",
     "datasetManager.updateParams(config_parser.fixPaths({**experiment_params,**{'augmented': False}}))\n",
-    "dataset = datasetManager.getDataset()\n",
-    "dataset.toggle_image_loading(augmentation=False, normalization=dataset.normalization_enabled) # Needed so we always get the same prediction accuracy \n",
-    "fineList = dataset.csv_processor.getFineList()\n",
-    "coarseList = dataset.csv_processor.getCoarseList()\n",
+    "train_dataset, _, test_dataset = datasetManager.getDataset()\n",
+    "train_dataset.toggle_image_loading(augmentation=False, normalization=train_dataset.normalization_enabled) # Needed so we always get the same prediction accuracy \n",
+    "fineList = train_dataset.csv_processor.getFineList()\n",
+    "coarseList = train_dataset.csv_processor.getCoarseList()\n",
     "\n",
     "# get a test loader without randomization\n",
-    "testIndicesFullPath = os.path.join(experimentPathAndName, experimentRecord['datasetName'].item(), testIndicesFile)\n",
-    "subset = torch.utils.data.Subset(dataset, dataLoader.readFile(testIndicesFullPath))\n",
-    "test_loader = torch.utils.data.DataLoader(subset, batch_size=1)"
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=1)"
    ]
   },
   {
@@ -226,9 +224,7 @@
     "    df_result = pd.DataFrame(columns = [np.array(h_list), np.array(h2_list)]  )   \n",
     "    \n",
     "    # Disable augmentation\n",
-    "    augmentation, normalization, _ = dataset.toggle_image_loading(augmentation=False, normalization=dataset.normalization_enabled)\n",
-    "    training_indices = datasetManager.get_indices(\"trainingIndex.csv\")\n",
-    "    training_dataset = torch.utils.data.Subset(dataset, training_indices)\n",
+    "    augmentation, normalization, _ = train_dataset.toggle_image_loading(augmentation=False, normalization=dataset.normalization_enabled)\n",
     "    \n",
     "    if numOfRows is None:\n",
     "        numOfRows = df['true label'].nunique()\n",
@@ -262,7 +258,7 @@
     "                            img.thumbnail((448,448), Image.ANTIALIAS)\n",
     "\n",
     "                            # get closest training image from dataset training set\n",
-    "                            closest, cosine_score = get_closest_example(fileName, dataset, training_dataset, experiment_params, model)\n",
+    "                            closest, cosine_score = get_closest_example(fileName, test_dataset, train_dataset, experiment_params, model)\n",
     "                            closest_fileName = closest['fileName']\n",
     "                            closest_species = fineList[closest['fine']]\n",
     "                            img2 = Image.open(os.path.join(images_path,closest_fileName))\n",
@@ -275,10 +271,10 @@
     "                            # get closest training image from dataset training set of same class\n",
     "                            if show_same_class:\n",
     "                                # get subset of trainign set that corresponds to the true label\n",
-    "                                class_training_indices = [indx for indx in training_indices if dataset[indx]['fine'] == trueLabel]\n",
-    "                                class_training_dataset = torch.utils.data.Subset(dataset, class_training_indices)\n",
+    "                                class_training_indices = [indx for indx in training_indices if train_dataset[indx]['fine'] == trueLabel]\n",
+    "                                class_training_dataset = torch.utils.data.Subset(train_dataset, class_training_indices)\n",
     "\n",
-    "                                closest_fromClass, cosine_score_fromClass = get_closest_example(fileName, dataset, class_training_dataset, experiment_params, model)\n",
+    "                                closest_fromClass, cosine_score_fromClass = get_closest_example(fileName, test_dataset, class_training_dataset, experiment_params, model)\n",
     "                                closest_fromClass_fileName = closest_fromClass['fileName']\n",
     "                                closest_fromClass_species = fineList[closest_fromClass['fine']]\n",
     "                                img3 = Image.open(os.path.join(images_path,closest_fromClass_fileName))\n",
@@ -319,11 +315,10 @@
     "                plt.close()\n",
     "\n",
     "    # Reenable aggregation if needed.\n",
-    "    dataset.toggle_image_loading(augmentation=augmentation, normalization=normalization)\n",
+    "    train_dataset.toggle_image_loading(augmentation=augmentation, normalization=normalization)\n",
     "\n",
     "def get_closest_example(fileName, source_dataset, target_dataset, experiment_params, model):\n",
-    "    fileName_index = source_dataset.csv_processor.get_index_from_fileName(fileName)\n",
-    "    top_1 = torch.topk(CNN.get_distance_from_example(target_dataset, source_dataset[fileName_index], model, experiment_params), 1)\n",
+    "    top_1 = torch.topk(CNN.get_distance_from_example(target_dataset, source_dataset[fileName], model, experiment_params), 1)\n",
     "    closest = target_dataset[top_1.indices[0][0].item()]\n",
     "    cosine_score = top_1.values[0][0].item()\n",
     "    return closest, cosine_score"
