--- a/HGNN/dataPrep/Create cleaned metadata.ipynb
+++ b/HGNN/dataPrep/Create cleaned metadata.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "dataPath=\"/data/BGNN_data\"\n",
     "image_path='INHS_cropped'\n",
-    "output_directory_name=\"biology_paper_cleaned\"\n",
+    "output_directory_name=\"biology_paper_cleaned_50max\"\n",
     "cleaned_species_csv_fileName = \"cleaned_metadata.csv\"\n",
     "species_csv_fileName = \"metadata.csv\"\n",
     "numberOfImagesPerSpecies_min =100 # If None, no min\n",
