--- a/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
+++ b/HGNN/train/ConfigParserWriter-GridExperiments.ipynb
@@ -41,39 +41,22 @@
     "params = {\n",
     "    # Do not change for multi/hyperp experiments\n",
     "    \"image_path\": \"INHS_cropped\", # \"/data/BGNN_data/CIFAR\", # \"/data/BGNN_data/INHS_cropped\",\n",
-    "    \"suffix\":'biology_paper_200max', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
+    "    \"suffix\":'biology_paper', #  #'11', '52', None # used to get a subset cleaned_metadata file. set to None otherwise to use full metadata\n",
     "    \n",
     "    # dataset\n",
-    "    \"training_count\":0.64,\n",
-    "    \"validation_count\":0.16,\n",
+    "    \"img_res\": 448, \n",
+    "    \"augmented\": True,\n",
     "\n",
     "    # training\n",
-    "    \"batchSize\": 64, # Bigger is more stable\n",
-    "    \"n_epochs\":500,\n",
+    "    \"batchSize\": 16, # Bigger is more stable\n",
     "    \"learning_rate\":0.00005, # 0.00005\n",
-    "    \"numOfTrials\":3,\n",
-    "    \"patience\": 10,\n",
-    "    \"fc_width\":200,\n",
+    "    \"numOfTrials\":5,\n",
     "    \"fc_layers\": 1,\n",
-    "    \"modelType\":\"DISCO\",\n",
+    "    \"modelType\":\"HGNN_add\", #BB DISCO DSN HGNN HGNN_add HGNN_cat\n",
     "    \"lambda\": 0.6,\n",
     "    \"unsupervisedOnTest\": False,\n",
     "    \"tl_model\": \"ResNet18\", # Keep 'ResNet18', 'ResNet50', 'CIFAR', 'NIN'\n",
-    "    \n",
-    "    \"augmented\": True,\n",
-    "    \"weight_decay\": 0.0001,\n",
-    "\n",
-    "    \"img_res\": 448,\n",
-    "    \"tl_freeze\": False, # False -> Fine tuning\n",
-    "    \"cnn_layers\":0, # Not used. Don't change. TODO: deprecate\n",
-    "    \"cnn_channels\":128, # Not used. Don't change. TODO: deprecate\n",
-    "    \n",
-    "    \"pretrained\": True,\n",
-    "    \"two_nets\": True, # True uses CNN_Two_Nets. Otherwise, uses CNN_hierarchy\n",
-    "    \"link_layer\": \"layer3\", # layer name should be consistent with tl_model layer names\n",
-    "    \"dataset_norm\": True, # False: Uses pretrained norm. True: calculates norm from dataset\n",
-    "    \n",
-    "    \"aug_profile\": \"withRotation_PCA1.5\"\n",
+    "    \"link_layer\": \"avgpool\", # layer name should be consistent with tl_model layer names. avgpool,\"layer3\"\n",
     "}\n",
     "\n",
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
