--- a/HGNN/train/Fix parameters.ipynb
+++ b/HGNN/train/Fix parameters.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "experimentsPath=\"/home/elhamod/HGNN/experiments/\"\n",
     "dataPath=\"/data/BGNN_data\"\n",
-    "experimentName=\"biology_paper_datasizes_BB\"\n",
+    "experimentName=\"biology_paper_unsupervised\"\n",
     "\n",
     "cuda=6"
    ]
@@ -59,9 +59,9 @@
     "\n",
     "# Keep same order as ConfigParserWriter!\n",
     "changes = {\n",
-    "    'numOfTrials': 3\n",
+    "    'numOfTrials': 5\n",
     "}\n",
-    "removes = ['patience','aug_profile']"
+    "removes = []"
    ]
   },
   {
@@ -110,12 +110,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed9488c291ce494fb48eadf99d878127",
+       "model_id": "f83ea521d7114505af54c8ae78b9af23",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=3.0, style=ProgressStyle(description_wid…"
+       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=1.0, style=ProgressStyle(description_wid…"
       ]
      },
      "metadata": {},
@@ -124,12 +124,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c248b3330ed4416bb1cfc986f4cdf80b",
+       "model_id": "d60c995ef8944785b53c3b53a3e32833",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=3.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -139,58 +139,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model /home/elhamod/HGNN/experiments/biology_paper_datasizes_BB/models/4c578e69396e5fdf84b6f8c67ac4e2055811f695d840d2a40ca81f32 -> /home/elhamod/HGNN/experiments/biology_paper_datasizes_BB/models/4c578e69396e5fdf84b6f8c67ac4e2055811f695d840d2a40ca81f32 updated\n",
-      "json /home/elhamod/HGNN/experiments/biology_paper_datasizes_BB/models/4c578e69396e5fdf84b6f8c67ac4e2055811f695d840d2a40ca81f32/params.json updated\n",
-      "model models/831dc79ea7b6e034cacead51aed9d63696e796b862bbf29150dc6e0e could not be fixed to models/831dc79ea7b6e034cacead51aed9d63696e796b862bbf29150dc6e0e\n",
-      "model models/4a786f7dda776afeaa7daeeb82f1330f6962446ac3320b37f2c33c67 could not be fixed to models/4a786f7dda776afeaa7daeeb82f1330f6962446ac3320b37f2c33c67\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5c14a707920444e871381568e852656",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=3.0, style=ProgressStyle(description_width='i…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model models/dcfabf5ce714de42b5bbaeb41b1e0e3730b7e9d950df15420e0548ae could not be fixed to models/dcfabf5ce714de42b5bbaeb41b1e0e3730b7e9d950df15420e0548ae\n",
-      "model models/32879544d09cfb1f7c6b6a8b9cb03b1a8b86a69718b6d152f65341e7 could not be fixed to models/32879544d09cfb1f7c6b6a8b9cb03b1a8b86a69718b6d152f65341e7\n",
-      "model models/814c55ad45d1fb2926f3263807b4412e644ef2c5cb6ee8e41425107e could not be fixed to models/814c55ad45d1fb2926f3263807b4412e644ef2c5cb6ee8e41425107e\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b34ee31401054f48934075bc152f4e7f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=3.0, style=ProgressStyle(description_width='i…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model models/25610f5d2832d5369b1c1e631160b92950da7cdbddce764e2c60e3ef could not be fixed to models/25610f5d2832d5369b1c1e631160b92950da7cdbddce764e2c60e3ef\n",
-      "model models/663b0cb31f1785c4e2662da64a5897201cb8d67801369078f636f255 could not be fixed to models/663b0cb31f1785c4e2662da64a5897201cb8d67801369078f636f255\n",
-      "model models/67829df4f9f07949903575bad092abd529fec317b1d4ec9611023eb8 could not be fixed to models/67829df4f9f07949903575bad092abd529fec317b1d4ec9611023eb8\n",
+      "model models/851a38d450ef7fa69a8beee91cc444d9e8340bcd4061894986a36ebe could not be fixed to models/851a38d450ef7fa69a8beee91cc444d9e8340bcd4061894986a36ebe\n",
+      "model models/319c4d36922d8a300028265cf7b687f2242d89372de03b80145e819f could not be fixed to models/319c4d36922d8a300028265cf7b687f2242d89372de03b80145e819f\n",
+      "model models/77780f0986b84842e710a492cd33f37e4e79b4c9ed9b3801a03121c0 could not be fixed to models/77780f0986b84842e710a492cd33f37e4e79b4c9ed9b3801a03121c0\n",
+      "model models/761b7febc9bcd94bcae1e2cc87ae9606c158227a97dcbc1d51b6cd62 could not be fixed to models/761b7febc9bcd94bcae1e2cc87ae9606c158227a97dcbc1d51b6cd62\n",
+      "model models/f6b0634420e6d2e3b01f52b1ec03d57be61d609526b08af06a8cfeb3 could not be fixed to models/f6b0634420e6d2e3b01f52b1ec03d57be61d609526b08af06a8cfeb3\n",
       "\n",
       "\n"
      ]
@@ -256,12 +209,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0d638a4b99f4feabc59f9d95e362e04",
+       "model_id": "61aaf6d7fef54c3192f367ef0ae2fd40",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=3.0, style=ProgressStyle(description_wid…"
+       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=1.0, style=ProgressStyle(description_wid…"
       ]
      },
      "metadata": {},
@@ -271,9 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result 5e22b0570f3e427d8c05ea1c55d284c0309188738361f92e99ced27a could not be fixed to 5e22b0570f3e427d8c05ea1c55d284c0309188738361f92e99ced27a\n",
-      "result f7ac08342108aa0218195ccec8495f64ff54d6b12a08db45c12028bd could not be fixed to f7ac08342108aa0218195ccec8495f64ff54d6b12a08db45c12028bd\n",
-      "result e278ad9ff3a35ee8f8879b1e050ab79a62473e7213bf4a2474b83bee could not be fixed to e278ad9ff3a35ee8f8879b1e050ab79a62473e7213bf4a2474b83bee\n",
+      "result d8e8f65e9b77352ccb8e1a46c62deb747b315c8413f87211a3521e23 could not be fixed to d8e8f65e9b77352ccb8e1a46c62deb747b315c8413f87211a3521e23\n",
       "\n"
      ]
     }
@@ -330,12 +281,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0443a81f3a2049ab8f1f8452b86b5a54",
+       "model_id": "957b3ad882f7462ebcc27e9402ce6837",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=3.0, style=ProgressStyle(description_wid…"
+       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=1.0, style=ProgressStyle(description_wid…"
       ]
      },
      "metadata": {},
@@ -344,61 +295,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e64d666a69da431490d0f3d15feff8d4",
+       "model_id": "9ceaa04fe29749c493b32640e729e17e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=3.0, style=ProgressStyle(description_width='i…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/elhamod/melhamodenv3/lib/python3.6/site-packages/ipykernel_launcher.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "522d19f448804d39853cb2d820fa038d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=3.0, style=ProgressStyle(description_width='i…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1eee61c4f0e04b3f867cb08100ee7628",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='trial', max=3.0, style=ProgressStyle(description_width='i…"
+       "HBox(children=(FloatProgress(value=0.0, description='trial', max=5.0, style=ProgressStyle(description_width='i…"
       ]
      },
      "metadata": {},
@@ -410,6 +312,13 @@
      "text": [
       "\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/elhamod/melhamodenv3/lib/python3.6/site-packages/ipykernel_launcher.py:23: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
      ]
     }
    ],
@@ -484,12 +393,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "590fd788ac0647829aa6cb5fb4cab88d",
+       "model_id": "e86300ed5e2f44edac96721f002727b5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=3.0, style=ProgressStyle(description_wid…"
+       "HBox(children=(FloatProgress(value=0.0, description='experiment', max=1.0, style=ProgressStyle(description_wid…"
       ]
      },
      "metadata": {},
@@ -499,11 +408,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_200max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_100max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
-      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 3, 'fc_layers': 1, 'modelType': 'BB', 'lambda': 0.6, 'unsupervisedOnTest': False, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
+      "{'image_path': 'INHS_cropped', 'suffix': 'biology_paper_cleaned_50max', 'img_res': 448, 'augmented': True, 'batchSize': 64, 'learning_rate': 5e-05, 'numOfTrials': 5, 'fc_layers': 1, 'modelType': 'HGNN_add', 'lambda': 0.6, 'unsupervisedOnTest': True, 'tl_model': 'ResNet18', 'link_layer': 'avgpool'}\n",
       "\n",
-      "json /home/elhamod/HGNN/experiments/biology_paper_datasizes_BB/params.json updated\n"
+      "json /home/elhamod/HGNN/experiments/biology_paper_unsupervised/params.json updated\n"
      ]
     }
    ],
